# CUDA_CNN

./: CMakeLists.txt  README.md  cudacnnet.cc  cudacnnet.h  forward_pass.cc
optimizations/atomics/: kernel.cu
optimizations/constant_memory/: kernel.cu
optimizations/fp16/: kernel.cu
optimizations/shared_memory/: kernel.cu
optimizations/streams/: kernel.cu
optimizations/unrolling/: kernel.cu
src/: CMakeLists.txt
src/layer/: conv_cpu.h  conv_cust.h
src/layer/custom/: cpu.cc  kernel.cu
